--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,6 +11,8 @@
 		<title>Astro</title>
 	</head>
 	<body>
+        <a href="/">Home</a>
+        <a href="/about/">About</a>
 		<h1>About me</h1>
         <h2>... and my new Astro site!</h2>
 
