--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,6 +13,7 @@
 	<body>
         <a href="/">Home</a>
         <a href="/about/">About</a>
+        <a href="/blog/">Blog</a>
 		<h1>About me</h1>
         <h2>... and my new Astro site!</h2>
 
