--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,19 @@
 ---
+const pageTitle="about me";
+const identity={
+
+
+  firstName: "Sarah",
+  country: "Canada",
+  occupation: "Technical writer",
+  hobbies: ["photography", "bird watuching", "peñarol"],
+};
+
+const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Redacción de documentos"];
+const happy =true;
+const finished=false;
+const goal = 3;
+
 
 ---
 
@@ -8,17 +23,37 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
+
 	</head>
 	<body>
         <a href="/">Home</a>
-        <a href="/about/">About</a>
+        <a href="/about/">About me</a>
         <a href="/blog/">Blog</a>
-		<h1>About me</h1>
+		<h1>{pageTitle}</h1>
         <h2>... and my new Astro site!</h2>
 
         <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
       
         <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
+
+		<p>He aquí algunos datos sobre mí:</p>
+<ul>
+  <li>Me llamo {identity.firstName}.</li>
+  <li>Vivo en {identity.country} y trabajo como {identity.occupation}.</li>
+  {identity.hobbies.length >= 2 &&
+    <li>Dos de mis aficiones son: {identity.hobbies[0]} y {identity.hobbies[1]}</li>
+  }
+</ul>
+<p>Mis habilidades son:</p>
+<ul>
+  {skills.map((skill) => <li>{skill}</li>)}
+</ul>
+
+{happy && <p>¡Estoy feliz de aprender Astro!</p>}
+
+{finished && <p>¡He terminado este tutorial!</p>}
+
+{goal === 3 ? <p>Mi objetivo es terminar en 3 días.</p> : <p>Mi objetivo no son 3 días.</p>}
       </body>
 </html>
