--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,5 @@
 ---
+import '../pages/styles/global.css'
 const pageTitle="about me";
 const identity={
 
@@ -14,6 +15,9 @@ const happy =true;
 const finished=false;
 const goal = 3;
 
+const skillColor  = "navy";
+const fontWeight  =  "bold";
+const textCase  =  "uppercase";
 
 ---
 
@@ -24,7 +28,17 @@ const goal = 3;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
-
+		<style define:vars={{skillColor, fontWeight, textCase}}>
+			h1{
+				color: purple;
+				font-size:4rem;
+			}
+			.skill{
+				color: var(--skillColor);
+   				font-weight: var(--fontWeight);
+    			text-transform: var(--textCase);
+			}
+		</style>
 	</head>
 	<body>
         <a href="/">Home</a>
@@ -47,7 +61,7 @@ const goal = 3;
 </ul>
 <p>Mis habilidades son:</p>
 <ul>
-  {skills.map((skill) => <li>{skill}</li>)}
+  {skills.map((skill) => <li class="skill">{skill}</li>)}
 </ul>
 
 {happy && <p>¡Estoy feliz de aprender Astro!</p>}
