--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,7 @@
 ---
+import Footer from '../components/Footer.astro';
 import '../pages/styles/global.css'
+import Navigation from '../components/Navigation.astro';
 const pageTitle="about me";
 const identity={
 
@@ -41,10 +43,7 @@ const textCase  =  "uppercase";
 		</style>
 	</head>
 	<body>
-        <a href="/">Home</a>
-        <a href="/about/">About me</a>
-        <a href="/blog/">Blog</a>
-		<h1>{pageTitle}</h1>
+		<Navigation />
         <h2>... and my new Astro site!</h2>
 
         <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
@@ -69,5 +68,6 @@ const textCase  =  "uppercase";
 {finished && <p>¡He terminado este tutorial!</p>}
 
 {goal === 3 ? <p>Mi objetivo es terminar en 3 días.</p> : <p>Mi objetivo no son 3 días.</p>}
+			<Footer />
       </body>
 </html>
