--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,6 @@
 ---
+import Footer from '../components/Footer.astro';
+import Navigation from '../components/Navigation.astro';
 import '../pages/styles/global.css';
 const pageTitle= "My Astro Learning Blog";
 ---
@@ -13,9 +15,7 @@ const pageTitle= "My Astro Learning Blog";
 	</head>
 	<body>
         <body>
-            <a href="/">Home</a>
-            <a href="/about/">About</a>
-            <a href="/blog/">Blog</a>
+           <Navigation />
             <h1>{pageTitle}</h1>
             <p>This is where I will post about my journey learning Astro.</p>            
             <ul>
@@ -23,5 +23,6 @@ const pageTitle= "My Astro Learning Blog";
                 <li><a href="/post/post-2">Post 2</a></li>
                 <li><a href="/post/post-3">Post 3</a></li>
             </ul>
+            <Footer />
         </body>
 </html>
