--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,7 @@
 ---
 import Footer from '../components/Footer.astro';
 import '../pages/styles/global.css'
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 const pageTitle="about me";
 const identity={
 
@@ -43,7 +43,7 @@ const textCase  =  "uppercase";
 		</style>
 	</head>
 	<body>
-		<Navigation />
+		<Header />
         <h2>... and my new Astro site!</h2>
 
         <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
