--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,10 @@
 ---
+import Hamburger from './Hamburger.astro';
 import Navigation from './Navigation.astro';
 ---
-
 <header>
-    <nav>
-      <Navigation />
-    </nav>
-  </header>
+  <nav>
+    <Hamburger />
+    <Navigation />
+  </nav>
+</header>
