--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -69,5 +69,8 @@ const textCase  =  "uppercase";
 
 {goal === 3 ? <p>Mi objetivo es terminar en 3 días.</p> : <p>Mi objetivo no son 3 días.</p>}
 			<Footer />
+			<script>
+				import "../scripts/menu.js";
+			  </script>
       </body>
 </html>
