--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 import '../pages/styles/global.css';
 
 const pageTitle= "Home Page";
@@ -18,5 +18,10 @@ const pageTitle= "Home Page";
 		<Header />
 		<h1>{pageTitle}</h1>
 		<Footer />
+		<Footer />
+		<script>
+		 import "../scripts/menu.js";
+		</script>
+	  </body>
 	</body>
 </html>
