--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,35 +1,23 @@
 ---
-import Footer from '../components/Footer.astro';
-import '../pages/styles/global.css'
-import Header from '../components/Header.astro';
+import '../pages/styles/global.css';
+import BaseLayout from '../layouts/BaseLayout.astro';
 const pageTitle="about me";
 const identity={
-
 
   firstName: "Sarah",
   country: "Canada",
   occupation: "Technical writer",
   hobbies: ["photography", "bird watuching", "peñarol"],
 };
-
 const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Redacción de documentos"];
 const happy =true;
 const finished=false;
 const goal = 3;
-
 const skillColor  = "navy";
 const fontWeight  =  "bold";
 const textCase  =  "uppercase";
-
 ---
-
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
+<BaseLayout pageTitle={pageTitle}>
 		<style define:vars={{skillColor, fontWeight, textCase}}>
 			h1{
 				color: purple;
@@ -41,9 +29,8 @@ const textCase  =  "uppercase";
     			text-transform: var(--textCase);
 			}
 		</style>
-	</head>
-	<body>
-		<Header />
+	
+	
         <h2>... and my new Astro site!</h2>
 
         <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
@@ -68,9 +55,7 @@ const textCase  =  "uppercase";
 {finished && <p>¡He terminado este tutorial!</p>}
 
 {goal === 3 ? <p>Mi objetivo es terminar en 3 días.</p> : <p>Mi objetivo no son 3 días.</p>}
-			<Footer />
+</BaseLayout>
 			<script>
 				import "../scripts/menu.js";
 			  </script>
-      </body>
-</html>
