--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,31 +1,18 @@
 ---
-import Footer from '../components/Footer.astro';
-import Header from '../components/Header.astro';
 import '../pages/styles/global.css';
-const pageTitle= "My Astro Learning Blog";
+import BaseLayout from '../layouts/BaseLayout.astro';
+const pageTitle= "Pagina del blog";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-	</head>
-	<body>
-        <body>
-           <Header />
-            <h1>{pageTitle}</h1>
-            <p>This is where I will post about my journey learning Astro.</p>            
+<BaseLayout pageTitle={pageTitle}>
+    <p>This is where I will post about my journey learning Astro.</p>            
             <ul>
-                <li><a href="/post/post-1">Post 1</a></li>
-                <li><a href="/post/post-2">Post 2</a></li>
-                <li><a href="/post/post-3">Post 3</a></li>
+                <li><a href="/posts/post-1/">Publicación 1</a></li>
+                <li><a href="/posts/post-2/">Publicación 2</a></li>
+                <li><a href="/posts/post-3/">Publicación 3</a></li>
             </ul>
-            <Footer />
+</BaseLayout>
             <script>
                 import "../scripts/menu.js";
               </script>
-        </body>
-</html>
+    
