--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,15 +1,15 @@
 ---
-import '../pages/styles/global.css';
 import BaseLayout from '../layouts/BaseLayout.astro';
-const pageTitle= "Pagina del blog";
+import BlogPost from './BlogPost.astro';
+const allPost = await Astro.glob('../pages/posts/*.md');
+const pageTitle= "Mi blog de aprendizaje de Astro";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
     <p>This is where I will post about my journey learning Astro.</p>            
             <ul>
-                <li><a href="/posts/post-1/">Publicación 1</a></li>
-                <li><a href="/posts/post-2/">Publicación 2</a></li>
-                <li><a href="/posts/post-3/">Publicación 3</a></li>
+         <!-- {allPosts.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)} -->
+         {allPost.map((post) => <BlogPost url ={post.url} title={post.frontmatter.title} />)}
             </ul>
 </BaseLayout>
             <script>
