--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
-import BlogPost from './BlogPost.astro';
+import BlogPost from '../components/BlogPost.astro';
 const allPost = await Astro.glob('../pages/posts/*.md');
 const pageTitle= "Mi blog de aprendizaje de Astro";
 ---
