--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,7 +11,7 @@ const identity={
 };
 const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Redacción de documentos"];
 const happy =true;
-const finished=false;
+const finished = true;
 const goal = 3;
 const skillColor  = "navy";
 const fontWeight  =  "bold";
